--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 /venv_py/
+/.idea/Мониторинг валют через API.iml
+/.idea/vcs.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/modules.xml
+/.idea/misc.xml
